--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "^15.3.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
